--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script type="module" src="index.js"></script>
+        <script defer src="index.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="table">
- 
+        <div id="table" class="container">
+
         </div>
     </body>
 </html>
