--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <button id="idbtn" type="button" class="btn">Start!</button>
         <div id="table" class="container">
 
         </div>
